<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textWelcome"
                android:gravity="center"
                android:text="@string/glad"
                android:textColor="@color/white"
                android:textSize="30sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="15dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/add"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:textColorHint="@color/white" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/remember_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/remember" />

                <TextView
                    android:id="@+id/forgot_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/for_pass"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </RelativeLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/log"
                android:textColor="@color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/or_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/log_with"
                    android:textColor="#FFFFFF" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/or_text"
                    android:background="@color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/or_text"
                    android:background="@color/white" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/gg"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/google_icon"
                    android:text="@string/gg"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/facebook_icon"
                    android:text="@string/fb"
                    android:textColor="@color/black" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="90dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/text_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/dont_have"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/text_account"
                    android:text="@string/sign"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>

</ScrollView>