<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="@drawable/app_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Forgot Password"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:gravity="left"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/textWelcome"
                android:text="@string/reset_pass"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:gravity="left"/>



        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email_forgot_password"
                android:paddingStart="20dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/add"
                android:background="@drawable/edit_text_background"
                android:textColorHint="@color/white"
                android:layout_marginVertical="15dp"
                android:inputType="textEmailAddress" />




            <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Send"
                android:textColor="@color/black"
                android:backgroundTint="@color/white" />




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_marginTop="250dp">

                <TextView
                    android:id="@+id/text_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have"
                    android:textSize="16sp"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:id="@+id/login_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_now"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@+id/text_account"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


</ScrollView>
